public/app/css/pages/article.css
/**
 * Layout rules
 */
:root {
    --entry-column-width: {
        max-width: var(--article-max-width);

        @media (--mobile) {
            padding-left: 20px;
            padding-right: 20px;
        }
    };
}

@custom-media --less-then-entry-column (max-width: 690px);

/**
* Article page styles
*/
.article {
    &__title {

        /**
         * We increase title-width from 650 to 700px to reduce line-breaking
         * To align left side, use transform
         */
        max-width: 700px;
        transform: translateX(25px);

        margin: 0 auto;
        padding: 80px 20px 40px;
        font-weight: 800;
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
        line-height: 1.25em;
        font-family: var(--serif-font);
        font-size: 37px;
        letter-spacing: -0.014em;

        @media (--mobile) {
            padding: 30px 20px;
            font-size: 26px;
        }

        @media (--mobile) and (--less-then-entry-column) {
            transform: none;
        }
    }

    /**
    * Article information: author, date
    */
    &__info {
        @apply --entry-column-width;

        margin: 0 auto 40px;
        display: flex;

        @media (--mobile) {
            flex-direction: column;
            margin-bottom: 30px;
        }
    }

    &__author {
        @apply --clearfix;

        white-space: nowrap;

        &-photo {
            width: 50px;
            height: 50px;
            border-radius: 50%;
            margin-right: 15px;
            margin-top: -3px;
            float: left;

            @apply --image-placeholder;

            @media (--mobile) {
                width: 40px;
                height: 40px;
                margin-top: 0;
            }
        }

        &-name {
            font-size: 15px;

            @media (--mobile) {
                font-size: 13.3px;
            }
        }
    }

    &__date {
        display: block;
        color: var(--text-gray);

        @media (--mobile) {
            line-height: 1.3em;
            font-size: 11.9px;
        }
    }

    /**
     * Read time
     */
    &__read-time {
        margin: auto 0 auto auto;
        color: var(--text-gray);

        &::before {
            content: '';
            background-image: url('/public/app/img/components/article/watch.svg');
            width: 19px;
            height: 20px;
            display: inline-block;
            margin-right: 5px;
            vertical-align: bottom;
        }

        @media (--mobile) {
            margin: 25px 0 0;
        }
    }

    /**
     * Read on English | Russian
     */
    &__read-on {
        margin: auto 0 auto auto;
        color: var(--text-gray);

        @media (--mobile) {
            margin: 25px 0 0;
        }

        &-item {
            cursor: pointer;

            &:first-of-type {
                margin-left: 10px;
            }

            &::before {
                display: inline-block;
                vertical-align: text-bottom;
                content: '';
                width: 16px;
                height: 16px;
                margin-right: 9px;
            }

            &:hover {
                color: color(var(--text-gray) blackness(+70%));
            }

            &--english::before {
                background-image: url('/public/app/img/components/article/flag-english.svg');
            }

            &--russian::before {
                background-image: url('/public/app/img/components/article/flag-russian.svg');
            }

            &:not(:last-of-type)::after {
                content: '|';
                margin: 0 8px 0 12px;
            }
        }
    }

    .sharing {
        @apply --entry-column-width;

        margin: 40px auto;

        @media (--mobile) and (--less-then-entry-column) {
            margin-left: 20px;
            margin-right: 20px;
        }
    }
}

/**
 * Article content body
 */
.article-content {
    font-size: 17.4px;
    line-height: 1.62em;
    word-wrap: break-word;
    letter-spacing: 0;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    color: #000000db;

    &--serif {
        font-size: 19.3px;
        line-height: 1.6em;
        letter-spacing: 0.1px;
        font-family: Georgia;
    }

    a {
        color: inherit;
        text-decoration: none;
        border-bottom: 1px solid #333;
    }

    i {
        font-family: Georgia;
        font-style: italic;
        letter-spacing: 0.1px;
        font-size: 1.05em;
    }

    p,
    h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    ul,
    ol,
    blockquote {
        @apply --entry-column-width;
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        margin: 1.6em auto 0.5em;
        font-family: var(--serif-font);
        letter-spacing: -0.02em;
        line-height: 1.3em;
        padding: 0;

        & + p {
            margin-top: 0;
        }
    }

    h2 {
        font-size: 1.6em;

        @media (--mobile) {
            font-size: 1.2em;
        }

    }

    h3,
    h4,
    h5,
    h6 {
        margin-top: 0.8em;
    }

    p {
        margin: 1.2em auto;
    }
}

/**
 * Image
 * =========================
 */
.article-image {
    @apply --entry-column-width;

    margin: 40px auto;
    text-align: center;

    @media (--mobile) {
        margin: 30px auto;
        padding-left: 0;
        padding-right: 0;
    }

    img {
        vertical-align: bottom;
        max-width: 100%;
    }

    &--stretched {
        max-width: none !important;
        width: 100% !important;

        img {
            width: 100%;
        }
    }

    &--bordered {
        img {
            border: 3px solid #fff;
            box-shadow: 0 0 0 2px var(--line-light);
            box-sizing: border-box;
        }
    }

    &-caption {
        margin: 1em auto;
        color: var(--text-gray);
    }
}

/**
 * Code
 * =========================
 */
.article-code {
    @apply --entry-column-width;

    margin: 40px auto;
    border: 1px solid #e4e4e4;
    padding: 15px 18px;
    border-radius: 5px;

    @media (--mobile) and (--less-then-entry-column) {
        box-sizing: border-box;
        margin: 30px 20px;
    }

    &__content {
        display: block;
        white-space: pre;
        overflow-x: auto;
        font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
        line-height: 1.7em;
        font-size: 13.6px;
        padding: 0 !important;

        @media (--mobile) {
            font-size: 10.2px;
            line-height: 1.6em;
        }
    }
}

/**
 * Quote
 * =========================
 */
.article-quote {
    margin: 40px auto;
    padding: 30px 0;
    border-top: 2px solid #e4e4e4;
    border-bottom: 2px solid #e4e4e4;
    font-family: Georgia;
    letter-spacing: 0.12px;
    font-style: italic;
    font-size: 20.4px;
    line-height: 1.6em;

    @media (--mobile) {
        padding-left: 0 !important;
        padding-right: 0 !important;
    }

    @media (--mobile) and (--less-then-entry-column) {
        margin: 30px 20px;
        padding-left: 20px !important;
        padding-right: 20px !important;
    }

    p {
        padding-left: 0 !important;
        padding-right: 0 !important;

        &:first-of-type {
            margin-top: 0;
        }

        &:last-of-type {
            margin-bottom: 0;
        }
    }
}

/**
 * Link tool
 * =========================
 */
.embed-link {
    display: block;
    max-width: var(--article-max-width);
    margin: 40px auto;
    padding: 25px;
    border: 1px solid var(--line-light) !important;
    box-shadow: 0 1px 1px #4246540a;
    border-radius: 2px;
    color: inherit !important;
    text-decoration: none !important;

    @media (--mobile) {
        box-sizing: border-box;
        padding: 20px;
        margin: 30px auto;
    }

    @media (--mobile) and (--less-then-entry-column) {
        margin: 30px 10px;
    }

    &__image {
        float: right;
        max-width: 150px;

        @media (--mobile) {
            max-width: 70px;
            margin: 0 0 15px 15px;
        }
    }

    &__title {
        font-size: 16px;
        line-height: 1.45em;
        font-weight: 600;

        @media (--mobile) {
            font-size: 12.2px;
        }
    }

    &__domain {
        display: inline-block;
        font-variant: small-caps;
        margin-top: 20px;
        border: 0 !important;
        color: var(--text-gray);
        font-size: 0.85em;

        @media (--mobile) {
            margin-top: 5px;
            font-size: 12px;
        }
    }

    &__description {
        margin-top: 10px;
        font-size: 0.9em;

        @media (--mobile) {
            margin-top: 5px;
            font-size: 12px;
        }
    }
}

/**
 * List
 * =========================
 */
.article-list {
    margin: 1.2em auto;

    @media (--mobile) {
        box-sizing: border-box;
    }

    @media (--mobile) and (--less-then-entry-column) {
        margin-left: 20px;
    }

    li {
        margin: 0.5em 0;
        padding-left: 0.5em;
    }
}

